<resources>
    <string name="app_name">Bingo</string>
    <string name="bingo">BINGO</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register">Register</string>
    <string name="create_room">Create room</string>
    <string name="no_rooms_joined">No rooms joined.</string>
    <string name="app_id">714178780957</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register">Don\'t have account. Register!</string>
    <string name="hint_sample_room">Sample Room</string>
    <string name="start_new_match">Start new match</string>
    <string name="waiting_for_people_to_join">Waiting for people to join</string>
    <string name="no_matches_for_this_room">No matches for this room</string>

    <string name="create_room_dialog_create">Create</string>
    <string name="create_room_dialog_cancel">Cancel</string>

    <string name="web_client_id">714178780957-vhvvbdaeekvtm4gglngkq8tpvb58luv8.apps.googleusercontent.com</string>
    <string name="start_match">Start Match</string>
</resources>
